--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,12 @@
     <string name="MVP">Model-View-Presenter</string>
     <string name="MVVM">Model-View-ViewModel</string>
 
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+
+    <string name="anonymous_login">Sign-in with anonymous</string>
+    <string name="login">Login</string>
+    <string name="sign_up">Sign up</string>
+    <string name="do_not_account">Did not have an account?</string>
+
 </resources>
